fixed z-index of profile

--- a/app/assets/stylesheets/components/modal.scss
+++ b/app/assets/stylesheets/components/modal.scss
@@ -1,16 +1,19 @@
 .model-background{
-    position: 'fixed';
+    position:fixed;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: 'rgba(255, 255, 255, 0.75)'
+    background-color: rgba(255, 255, 255, 0.75);
   }
 
 .modal-show{
   position: absolute;
-  top: 40vh;
-  left:50vw;
-  overflow: auto;
+  width: 600px;
+  height: 400px;
+  top: 50%;
+  left:50%;
+  -webkit-transform:translate(-50%,-50%);
+  padding: 10px;
   background: white;
 }
