--- a/app/assets/stylesheets/components/profile.scss
+++ b/app/assets/stylesheets/components/profile.scss
@@ -10,7 +10,7 @@
   padding-bottom: 20px;
   position: absolute;
   display: flex;
-  z-index: 1;
+  z-index: 0;
   box-sizing: border-box;
 }
 
@@ -36,7 +36,7 @@
 .profile-text img {
   height: 100px;
   width: auto;
-  z-index: 100;
+  z-index: 1;
   border-radius: 50px;
 }
 
